assets/scss/site.scss
/* ... */
@media (min-width: 53em) {
    .content {
        padding-bottom: 32px;
        padding-bottom: 2rem;
    }
}

.sectioned-sidebar, .sectioned-main {
    box-sizing: border-box;
}

@media (min-width: 45em) {
    .sectioned-sidebar {
        width: 30%;
        float: left;
    }

    .sectioned-main {
        margin-left: 30.2%;
        overflow: hidden;
    }
}

@media (min-width: 63em) {
    .sectioned-sidebar {
        width: 300px;
        width: 18.7rem;
    }

    .sectioned-main {
        margin-left: 302px;
        margin-left: 18.8em;
    }
}

.bar, .page-title {
    background-color: #15181b;
    border-color: #334047;
    border-color: rgba(150, 170, 189, 0.2);
    border-style: solid;
    border-width: 1px 0;
    display: block;
}

.page-title {
    line-height: 40px;
    line-height: 2.5rem;
    font-size: 19px;
    font-size: 1.2rem;
    margin: 16px 0;
    margin: 1rem 0;
}

a.bar {
    font-size: 16px;
    font-size: 1rem;
    height: 40px;
    height: 2.5rem;
    line-height: 40px;
    line-height: 2.5rem;
}

.page-title a {
    display: inline-block;
    margin-right: 0.3em;
    padding-right: 1.2em;
    position: relative;
    overflow: hidden;
    vertical-align: top;
}

.page-title a::before, .page-title a::after {
    display: block;
    width: 0;
    height: 0;
    content: "";
    position: absolute;
    top: 50%;
    border: 0 solid transparent;
    border-width: 1.4em 0 1.4em 0.8em;
    margin-top: -1.35em;
    z-index: 1;
}

.page-title a::before {
    border-left-color: #334047;
    border-left-color: rgba(150, 170, 189, 0.2);
    right: 0;
}

.page-title a::after {
    border-left-color: #15181b;
    right: 4px;
}

@media (min-width: 53em) {
    .page-title, .page-title a, a.bar {
        height: 44px;
        height: 2.75rem;
        line-height: 44px;
        line-height: 2.75rem;
        font-size: 22px;
        font-size: 1.4rem;
    }

    .page-title {
        margin: 24px 0;
        margin: 1.5rem 0;
    }
}

:root {
    --content-pad-h: 16px;
}

.pad-left, .content, .page-title {
    padding-left: var(--content-pad-h);
}

.pad-right, .content, .stage a.more, .page-title {
    padding-right: var(--content-pad-h);
}

@media (min-width: 53em) {
    :root {
        --content-pad-h: 32px;
    }
}

.avatar, .avatar img {
    display: block;
    height: auto;
    line-height: 0;
    max-width: 100%;
    width: 100px;
}

.avatar {
    border: 2px solid #ddd;
    border-radius: 4px;
}

.content .avatar {
    border: none;
}


.formatted-content {
    word-wrap: break-word;
}

.constrained {
    max-width: 50em;
    margin: 0 auto;
}

.formatted-content p, .formatted-content ul, .formatted-content ol {
    padding-bottom: 1.5em;
}

.formatted-content p:last-child, .formatted-content ul:last-child,
.formatted-content ol:last-child {
    padding-bottom: 0;
}

.formatted-content blockquote {
    margin-bottom: 1.5em;
}

.formatted-content blockquote:last-child {
    margin-bottom: 0;
}

.formatted-content ul, .formatted-content ol {
    margin-left: 2em;
}

.formatted-content h1 {
    font-size: 1.8em;
    padding-bottom: 0.9em;
}

.formatted-content p + h1 {
    padding-top: 0.4em;
}

.formatted-content h2 {
    font-size: 1.5em;
    padding-bottom: 1em;
}

.formatted-content p + h2 {
    padding-top: 0.3em;
}

.formatted-content h3 {
    font-size: 1.3em;
    padding-bottom: 1.1em;
}

.formatted-content h4 {
    font-size: 1.2em;
    padding-bottom: 1.2em;
}

.formatted-content h5 {
    font-size: 1.1em;
    padding-bottom: 1.3em;
}

.formatted-content h6 {
    font-size: 1em;
    padding-bottom: 1.4em;
}

.formatted-content ul li {
    list-style-type: square;
}

.formatted-content p + hr {
    margin-top: -0.7em;
}

.formatted-content img {
    max-width: 100%;
}

.formatted-content pre {
    background-color: #eee;
    margin-bottom: 1.5em;
    padding: 0.5em;
    tab-size: 4;
    word-break: break-all;
    font-size: 0.82rem;
}

.formatted-content pre:only-child {
    margin-bottom: 0;
}

.formatted-content .align-left    { text-align: left; }
.formatted-content .align-center  { text-align: center; }
.formatted-content .align-right   { text-align: right; }
.formatted-content .align-justify { text-align: justify; }

.formatted-content .image-right {
    float: right;
    margin: 0 0 1.5em 1.5em;
    max-width: 40%;
}

.toolset li {
    float: left;
}

.toolset li a, .toolset li button {
    display: block;
    height: 32px;
    height: 2rem;
    line-height: 32px;
    line-height: 2rem;
    padding: 0 0.8em 0 0;
    margin: 0;
    font-size: 13px;
    font-size: 0.8rem;
    color: #696d6f;
    background: transparent;
    border: none;
    cursor: pointer;
}

.toolset li a:hover, .toolset li a.active, .toolset li button:hover, .toolset li button.active {
    text-decoration: none;
    color: #b1b7be;
}

.toolset li + li a, .toolset li + li button {
    padding-left: 0.8em;
}

.toolset li:last-child a, .toolset li:last-child button {
    padding-right: 0;
}

@media (min-width: 45em) {
    .toolset li a, .toolset li button {
        font-size: 14px;
        font-size: 0.9rem;
    }
}

.one-line {
    display: block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

/* single, two-column dl list items with dashed borders between them */
dl.leaders dt + dd {
    padding-top: 0.375em;
    margin-top: 0.375em;
    border-top: 1px dashed #b4b4b4;
}

dl.leaders dt:first-child + dd {
    border-top: none;
}

dl.leaders dt {
    float: left;
    clear: left;
    padding-top: 0.375em;
    font-weight: 700;
}

dl.leaders dd + dt,
dl.leaders dt + dt {
    padding-top: 0.75em;
}

dl.leaders dd {
    text-align: right;
}

dl + h4, #uc-info {
    padding-top: 24px;
    padding-top: 1.5rem;
}
/* ... */

